--- a/Faculty_Information_System/My Project/Resources.resx
+++ b/Faculty_Information_System/My Project/Resources.resx
@@ -118,10 +118,34 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="white-tecnologia-background-template" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>white-tecnologia-background-template.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="1859b6432e5af07" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>1859b6432e5af07.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="IIT_Guwahati_Logo.svg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>IIT_Guwahati_Logo.svg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="220px-User_icon_2.svg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>220px-User_icon_2.svg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logbg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>logbg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cliqz-search-background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>cliqz-search-background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="login bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>login bg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="top-line-management-login-background-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>top-line-management-login-background-1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="77597064f5b9eb0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>77597064f5b9eb0.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="admin-login-background-images-8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>admin-login-background-images-8.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
