--- a/Faculty_Information_System/My Project/Resources.resx
+++ b/Faculty_Information_System/My Project/Resources.resx
@@ -124,6 +124,9 @@
   <data name="delete_users_group-512" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>delete_users_group-512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="manager-512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>manager-512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="core-2-iitg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>core-2-iitg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -144,9 +147,6 @@
   </data>
   <data name="login bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>login bg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="IIT-Guwahati1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>IIT-Guwahati.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="IIT-Guwahati" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>IIT-Guwahati.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -190,8 +190,11 @@
   <data name="47949" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>47949.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="manager-512" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>manager-512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="admin-login-background-images-81" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>admin-login-background-images-8.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="IIT-Guwahati1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>IIT-Guwahati.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="220px-User_icon_21" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>220px-User_icon_2.svg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -202,7 +205,7 @@
   <data name="1859b6432e5af07" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>1859b6432e5af07.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="admin-login-background-images-81" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>admin-login-background-images-8.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="131-1319878" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>131-1319878.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
